Complete Main Npc

--- a/conf/map_athena.conf
+++ b/conf/map_athena.conf
@@ -128,4 +128,4 @@ import: conf/maps_athena.conf
 import: conf/import/map_conf.txt
 
 // Npcs:
-import: npc/i_npc/i_npc.conf
+//import: npc/i_npc/i_npc.conf
