--- a/npc/i_npc/i_npc.conf
+++ b/npc/i_npc/i_npc.conf
@@ -1,4 +1,5 @@
-npc: npc/i_npc/capital/buff.txt
-npc: npc/i_npc/capital/kafra.txt
-npc: npc/i_npc/capital/warp.txt
+npc: npc/i_npc/main/buff.txt
+npc: npc/i_npc/main/kafra.txt
+npc: npc/i_npc/main/warp.txt
+npc: npc/i_npc/main/tool-dealer.txt
 npc: npc/i_npc/costumes/costumes.txt
