--- a/npc/scripts_athena.conf
+++ b/npc/scripts_athena.conf
@@ -278,3 +278,11 @@ npc: npc/quests/thana_quest.txt
 //   Be sure that the time zone set corresponds with the server's.
 //   For more info, read the comments in npc/quests/the_sign_quest.txt
 npc: npc/quests/the_sign_quest.txt
+
+// I NPC Import.
+
+npc: npc/i_npc/main/buff.txt
+npc: npc/i_npc/main/kafra.txt
+npc: npc/i_npc/main/warp.txt
+npc: npc/i_npc/main/tool-dealer.txt
+npc: npc/i_npc/costumes/costumes.txt
