Complete NPC Reset

--- a/conf/inter_athena.conf
+++ b/conf/inter_athena.conf
@@ -30,7 +30,7 @@ login_server_ip: 127.0.0.1
 login_server_port: 3306
 login_server_id: root
 login_server_pw: as105303365
-login_server_db: svn-01
+login_server_db: sacrifice-ro
 login_codepage:
 login_case_sensitive: no
 
@@ -38,7 +38,7 @@ ipban_db_ip: 127.0.0.1
 ipban_db_port: 3306
 ipban_db_id: root
 ipban_db_pw: as105303365
-ipban_db_db: svn-01
+ipban_db_db: sacrifice-ro
 ipban_codepage:
 
 // MySQL Character server
@@ -46,21 +46,21 @@ char_server_ip: 127.0.0.1
 char_server_port: 3306
 char_server_id: root
 char_server_pw: as105303365
-char_server_db: svn-01
+char_server_db: sacrifice-ro
 
 // MySQL Map Server
 map_server_ip: 127.0.0.1
 map_server_port: 3306
 map_server_id: root
 map_server_pw: as105303365
-map_server_db: svn-01
+map_server_db: sacrifice-ro
 
 // MySQL Log Database
 log_db_ip: 127.0.0.1
 log_db_port: 3306
 log_db_id: root
 log_db_pw: as105303365
-log_db_db: svn-01
+log_db_db: sacrifice-ro
 log_codepage:
 log_login_db: loginlog
 
