--- a/npc/scripts_athena.conf
+++ b/npc/scripts_athena.conf
@@ -286,3 +286,4 @@ npc: npc/i_npc/main/kafra.txt
 npc: npc/i_npc/main/warp.txt
 npc: npc/i_npc/main/tool-dealer.txt
 npc: npc/i_npc/costumes/costumes.txt
+npc: npc/i_npc/etc/reseter.txt
