--- a/npc/scripts_athena.conf
+++ b/npc/scripts_athena.conf
@@ -279,11 +279,11 @@ npc: npc/quests/thana_quest.txt
 //   For more info, read the comments in npc/quests/the_sign_quest.txt
 npc: npc/quests/the_sign_quest.txt
 
-// I NPC Import.
-
-npc: npc/i_npc/main/buff.txt
-npc: npc/i_npc/main/kafra.txt
-npc: npc/i_npc/main/warp.txt
-npc: npc/i_npc/main/tool-dealer.txt
-npc: npc/i_npc/costumes/costumes.txt
-npc: npc/i_npc/etc/reseter.txt
+// SRO NPC IMPORT.
+npc: npc/sro_npc/main/buff.txt
+npc: npc/sro_npc/main/kafra.txt
+npc: npc/sro_npc/main/warp.txt
+npc: npc/sro_npc/main/tool-dealer.txt
+npc: npc/sro_npc/costumes/costumes.txt
+npc: npc/sro_npc/etc/reseter.txt
+npc: npc/sro_npc/etc/jobchange.txt
