--- a/npc/scripts_athena.conf
+++ b/npc/scripts_athena.conf
@@ -287,3 +287,4 @@ npc: npc/sro_npc/main/tool-dealer.txt
 npc: npc/sro_npc/costumes/costumes.txt
 npc: npc/sro_npc/etc/reseter.txt
 npc: npc/sro_npc/etc/jobchange.txt
+npc: npc/sro_npc/etc/slotmachine.txt
